--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,14 @@
 .nav {
   height: 96px;
 }
+
+.iconBlue {
+  color:#0084EA;
+  background-color: white;
+  width: 80px;
+  
+}
+
+.icon_cel {
+  margin: 0 30px;
+}
