creación del header (título y párrafo)

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 
 #root {
   font-family: poppins;
+  font-weight: 400;
 }
 
 .logo_blanco {
@@ -25,4 +26,13 @@
 
 .icon_cel {
   margin: 0 30px;
+}
+
+.fondo_celeste {
+  background-color: #E2F2FE;
+}
+
+.texto_azul {
+  font-weight:600;
+  color: #2738F5;
 }
