--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
   font-weight: 600;
   margin-bottom: 2rem;
 }
+
+.card {
+  margin: 1rem 0.2rem;
+  padding: 4rem 0 4rem 0;
+  border-radius: 1rem;
+}
