--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,24 @@
 .icon_cel {
   margin: 0 30px;
 }
+
+.texto_azul {
+  font-weight:600;
+  color: #2738F5;
+}
+
+.titulo {
+  font-weight: 600;
+  margin-bottom: 2rem;
+}
+
+.card {
+  margin: 1rem 0.2rem;
+  padding: 4rem 0 4rem 0;
+  border-radius: 1rem;
+}
+
+.borde {
+  border: 3px solid #2738F5;
+  border-radius: 0.5rem;
+}
