--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jockey+One&family=Poppins:wght@100;200;300;400;500&display=swap');
 
 
 #root {
-  font-family: poppins;
+  font-family: 'Poppins', sans-serif;
 }
 
 .logo_blanco {
@@ -46,3 +46,8 @@
 .borde {
   border: 3px solid #2738F5;
   border-radius: 0.5rem;
+}
+
+.jockey {
+  font-family: 'Jockey One', sans-serif;
+}
